...
                k("V", "V"), k("B", "B"), k("N", "N"), k("M", "M"),
                k(",", "COMMA"), k(".", "PERIOD"), k("/", "SLASH"), k("Shift", "SHIFT_RIGHT", 2.75f)
            ),
            listOf(
                k("Ctrl", "CTRL_LEFT", 1.25f), k("Win", "META_LEFT", 1.25f),
                k("Alt", "ALT_LEFT", 1.25f), k("Space", "SPACE", 7.5f),
                k("Alt", "ALT_RIGHT", 1.25f), k("Menu", "MENU", 1.25f),
                k("Ctrl", "CTRL_RIGHT", 1.25f)
            )
        )
    )

    private val keysAltDef = LayoutDef(
...
